--- a/site/index.html
+++ b/site/index.html
@@ -8,9 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
   <h1>ANEURISM IV Tracker</h1>
+  <div>
+    <a class="github-button" href="https://github.com/ynot01/aneurism-graphs" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large" aria-label="Visit ynot01/aneurism-graphs on GitHub">Frontend</a>
+    <a class="github-button" href="https://github.com/ynot01/aneurism-graphs-go" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large" aria-label="Visit ynot01/aneurism-graphs-go on GitHub">Backend</a>
+  </div>
   <h1>Total Players: <span id="currentPlayers">N/A</span> | Total Rot: <span id="currentRot">N/A</span></h1>
   <h2>Last updated: <span id="updatedAgo">Loading...</span> <u><a id="refreshBtn" onClick="window.location.reload();" style="cursor: pointer;display: none;">Refresh Page</a></u> | <a href="https://ko-fi.com/ynot01">donate</a></h2>
   <noscript>This website requires Javascript to render the graphs and it is disabled.</noscript>
