fix donate button

--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
   <div>
     <a class="github-button" href="https://github.com/ynot01/aneurism-graphs" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large" aria-label="Visit ynot01/aneurism-graphs on GitHub">Frontend</a>
     <a class="github-button" href="https://github.com/ynot01/aneurism-graphs-go" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-size="large" aria-label="Visit ynot01/aneurism-graphs-go on GitHub">Backend</a>
-    <a class="github-button" href="https://ko-fi.com/ynot01" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-heart" data-size="large" aria-label="Visit ynot01's ko-fi page">Donate</a>
+    <a class="github-button" href="https://github.com/sponsors/ynot01" data-color-scheme="no-preference: dark; light: light; dark: dark;" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @ynot01 on GitHub">Sponsor</a>
   </div>
   <h1>Total Players: <span id="currentPlayers">N/A</span> | Total Rot: <span id="currentRot">N/A</span></h1>
   <h2>Last updated: <span id="updatedAgo">Loading...</span> <u><a id="refreshBtn" onClick="window.location.reload();" style="cursor: pointer;display: none;">Refresh Page</a></u></h2>
